# datagovgr-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: server.py
tests/: test_server.py
